--- a/accessory/index.html
+++ b/accessory/index.html
@@ -29,7 +29,7 @@
     
     <h2>Total Price: <span id="total-price">$0</span></h2>
     <h2>Vat Amount: <span id="vatAmount">$0</span></h2>
-    <h2>Total Vat: <span id="totalVat">$0</span></h2>
+    <h2>Total Price After Vat: <span id="totalVat">$0</span></h2>
  
     
     <script>
