--- a/accessory/index.html
+++ b/accessory/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Car Accessories</title>
-    <link rel="stylesheet" type="text/css" href="/Web/Class2/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/Web/Class2 and 3/css/global.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <h1>Car Accessories</h1>
@@ -34,36 +35,57 @@
     
     <script>
         function addItem() {
-            var accessorySelect = document.getElementById("accessory-select");
-            var selectedAccessory = accessorySelect.options[accessorySelect.selectedIndex].text;
-            var selectedAccessoryValue = accessorySelect.options[accessorySelect.selectedIndex].value;
-            var amountInput = document.getElementById("amount-input");
-            var amount = amountInput.value;
-            var accessoryTable = document.getElementById("accessory-table");
-            var price = parseFloat(selectedAccessoryValue)
-            var totalPrice = document.getElementById("total-price");
-            var productTable = document.getElementById("product-list");
-            var vatAmount = document.getElementById("vatAmount");
-            var totalVat = document.getElementById("totalVat");
+            // var accessorySelect = document.getElementById("accessory-select");
+            // var selectedAccessory = accessorySelect.options[accessorySelect.selectedIndex].text;
+            // var selectedAccessoryValue = accessorySelect.options[accessorySelect.selectedIndex].value;
+            // var amountInput = document.getElementById("amount-input");
+            // var amount = amountInput.value;
+            // var accessoryTable = document.getElementById("accessory-table");
+            // var price = parseFloat(selectedAccessoryValue)
+            // var totalPrice = document.getElementById("total-price");
+            // var productTable = document.getElementById("product-list");
+            // var vatAmount = document.getElementById("vatAmount");
+            // var totalVat = document.getElementById("totalVat");
 
-            var row = productTable.insertRow(-1);
-            var accessoryCell = row.insertCell(0);
-            var amountCell = row.insertCell(1);
-            var priceCell = row.insertCell(2);
+            // var row = productTable.insertRow(-1);
+            // var accessoryCell = row.insertCell(0);
+            // var amountCell = row.insertCell(1);
+            // var priceCell = row.insertCell(2);
             
-            accessoryCell.innerHTML = selectedAccessory;
-            amountCell.innerHTML = amount;
-            priceCell.innerHTML = "$" + (price * amount);
+            // accessoryCell.innerHTML = selectedAccessory;
+            // amountCell.innerHTML = amount;
+            // priceCell.innerHTML = "$" + (price * amount);
 
-            // totalPrice.innerHTML = "$" + (parseFloat(totalPrice.innerHTML.substring(1)) + (price * amount));
-            var totalValuePrice = parseFloat(totalPrice.innerHTML.substring(1)) + (price * amount);
-            totalPrice.innerHTML = "$" + totalValuePrice;
+            // // totalPrice.innerHTML = "$" + (parseFloat(totalPrice.innerHTML.substring(1)) + (price * amount));
+            // var totalValuePrice = parseFloat(totalPrice.innerHTML.substring(1)) + (price * amount);
+            // totalPrice.innerHTML = "$" + totalValuePrice;
+            // var vatRate = 0.07;
+            // var vatAmount1 = parseFloat((totalValuePrice * vatRate).toFixed(2));
+            // var totalVat1 = parseFloat((totalValuePrice + vatAmount1).toFixed(2));
+
+            // vatAmount.innerHTML = "$" + vatAmount1;
+            // totalVat.innerHTML = "$" + totalVat1;
+            var accessorySelect = $('#accessory-select');
+            var selectedAccessory = accessorySelect.find('option:selected').text();
+            var selectedAccessoryValue = accessorySelect.find('option:selected').val();
+            var amount = $('#amount-input').val();
+            var price = parseFloat(selectedAccessoryValue);
+            var totalPrice = $('#total-price');
+            var productTable = $('#product-list');
+            var vatAmount = $('#vatAmount');
+            var totalVat = $('#totalVat');
+
+            var newRow = '<tr><td>' + selectedAccessory + '</td><td>' + amount + '</td><td>$' + (price * amount) + '</td></tr>';
+            productTable.append(newRow);
+
+            var totalValuePrice = parseFloat(totalPrice.text().substring(1)) + (price * amount);
+            totalPrice.text('$' + totalValuePrice.toFixed(2));
             var vatRate = 0.07;
-            var vatAmount1 = parseFloat((totalValuePrice * vatRate).toFixed(2));
-            var totalVat1 = parseFloat((totalValuePrice + vatAmount1).toFixed(2));
+            var vatAmountValue = parseFloat((totalValuePrice * vatRate).toFixed(2));
+            var totalVatValue = parseFloat((totalValuePrice + vatAmountValue).toFixed(2));
 
-            vatAmount.innerHTML = "$" + vatAmount1;
-            totalVat.innerHTML = "$" + totalVat1;
+            vatAmount.text('$' + vatAmountValue);
+            totalVat.text('$' + totalVatValue);
         }
     </script>
 </body>
